# tog-pegasus

./: BUILDNOTES  Configure  LIFECYCLE_PEP172_README.TXT  Makefile  Makefile.Release  Makefile.ReleaseTest  Makefile.interop  Makefile.webAdmin  Makefile.webadmin  OpenPegasusNOTICE.txt  PEP098Pegasus2_3_0_ReleaseNotes.htm  PEP118_Pegasus2_3_1ReleaseNotes.htm  PEP185Pegasus2_4ReleaseNotes.htm  PEP_150Pegasus2_3_2ReleaseNotes.htm  README.html  README.mday  ReleaseNotes.htm  ReleaseNotesAddendumPegasus2_9_2.htm  SetConfig_EnvVar  SetConfig_EnvVar.help  TODELETE  TestMakefile  Testcimmof  cimom_handle.html  configure  configure.mak  diffscript  dynamic_schema.html  env_var.status  env_var_HPUX.status  env_var_Linux.status  indications.html  logging.html  readme.EmbeddedSystemBuild  readme.MemoryResidentRepository  readme.SetConfig_EnvVar  readme.StaticProviderRegistration  readme.StaticProviders  readme.binary_protocol_faq  readme.binary_repository  (+15 more)
Dummy/: Document1.txt  Document3.txt  Document4.txt  Document5.txt  bill.c  fred.c
InterfaceArchive/v002001/: Makefile  version.mak
Schemas/: Makefile  README
Schemas/CIM2101/: CIM_Core.mof  CIM_Event.mof  CIM_Interop.mof  CIM_Physical.mof  CIM_Schema.mof  CIM_System.mof  Core_Qualifiers.mof  ckin_dmtf_files  create_ckin_script  create_interface_files
Schemas/CIM211/: CIM_Core.mof  CIM_Event.mof  CIM_Interop.mof  CIM_Physical.mof  CIM_Schema.mof  CIM_System.mof  Core_Qualifiers.mof  ckin_dmtf_files  create_ckin_script  create_interface_files  readme
Schemas/CIM2131/: CIM_Core.mof  CIM_Event.mof  CIM_Interop.mof  CIM_Physical.mof  CIM_Schema.mof  CIM_System.mof  Core_Qualifiers.mof
Schemas/CIM217/: CIM_Core.mof  CIM_Event.mof  CIM_EventExperimental.mof  CIM_Interop.mof  CIM_Physical.mof  CIM_Schema.mof  CIM_System.mof  Core_Qualifiers.mof  DMTFSchemaInfo.txt
Schemas/CIM222/: CIM_Core.mof  CIM_System.mof  DMTFSchemaInfo.txt
Schemas/CIM228/: DMTFSchemaInfo.txt
Schemas/CIM236/: op
Schemas/CIM24/: CIM_Dap24.mof  CIM_Device24.mof  CIM_Network24.mof  CIM_Physical24.mof  CIM_Policy24.mof  CIM_Schema24.mof  CIM_Support24.mof  CIM_System24.mof  CIM_User24.mof
Schemas/CIM25/: CIM_Application25.mof  CIM_Core25.mof  CIM_Core25_Add.mof  CIM_Device25.mof  CIM_Events25.mof  CIM_Metrics25.mof  CIM_Network25.mof  CIM_Network25_Add.mof  CIM_Physical25.mof  CIM_Policy25.mof  CIM_Schema25.mof  CIM_Support25.mof  CIM_System25.mof  CIM_User25.mof  readme.txt
Schemas/CIM26/: CIM_Application26.mof  CIM_Core26.mof  CIM_Device26.mof  CIM_Event26.mof  CIM_Interop26.mof  CIM_Metrics26.mof  (+7 more)
cgi/: Makefile  README
doc/: BuildAndReleaseOptions.html  CIM-HTTP.txt  CIMOperations.h  CIM_Questions.txt  CIM_Schema24.xml  CodeReviewNotes.txt  CodingGuidelines.htm  DOCREMARKS  ExternalInterface.html  Globalization_HOWTO.htm  HISTORY  HOWTOCOMPILER.txt  IndicationFlow.txt  LICENSE  MakeCodeNicer.dsm  MessageQueueService.html  NOTES  OSSChanges.txt  PORTNOTES  PegasusProjectTaskList.html  PegasusProjectTaskListExcel.html  PegasusSSLGuidelines.htm  Pegasus_2.2-ReleaseNotes_PEP082.htm  ProjectPhases.htm  ProviderLoading.txt  RuntimePackaging.html  SDKPackaging.html  SecurityGuidelinesForDevelopers.html  TODO  Tru64BuildNotes.txt  activities.txt  bugs.txt  changelog.txt  conventions.txt  erp.txt  ftp.rdg.opengroup.org  header.txt  issues.txt  iterator_example.txt  license.txt  (+8 more)
mak/: BuildMakefile  CommitMakefile  CreateDmtfSchema  README  SDKMakefile  TaskMakefile  bcpp.sh  build.mak  certificate_test.mak  certificate_test_readme.html  clean.mak  commands.mak  common.mak  config-linux-iX86-gnu.mak  config-linux.mak  config-linux_iX86_gnu.mak  config-nsk.mak  config-platform.mak  config-unix.mak  config-vms.mak  config-win32-iX86-msvc.mak  config-win32_iX86_msvc.mak  config-windows.mak  config.mak  configschema.mak  depend-unix.mak  depend-vms.mak  depend-windows.mak  depend.mak  docxx.mak  dynamic-library.mak  headers.mak  install.mak  library-nsk.mak  library-unix.mak  library-vms.mak  library-vxworks.mak  library-windows.mak  library.mak  license.mak  (+64 more)
rpm/: Makefile  RPMMakefile  access.conf  buildincludes  cimserver_planned.conf  commands-tog-pegasus.rc  lsb-pegasus.rc  lsb-pegasus.spec  lsb-pegasus.spec.in  lsb-pegasus.xml  lsb-pegasus.xml.in  openpegasus.org-wbem-2.2.spec  openpegasus.org-wbem-2.3.spec  openpegasus.org-wbem-rh32-2.2.spec  openpegasus.org-wbem.spec  pegasus  pegasus-1.0.spec  preamble-tog-pegasus.rc  readme.txt  tog-pegasus.rc  tog-pegasus.spec  wbem  wbem-redhat  wbem1.rh7  wbem22.lnx
src/: Makefile  t_cpp  t_cpp.cpp  t_h  t_h.h
src/Unsupported/slp_client/: INSTALL  LICENSE  Makefile  Makefile.in  Makefile.nt  README  README.AUTOCONF  config.h  config.h.in  configure  configure.ac
src/Unsupported/slp_client/doc/: draft-day-srvloc-exclusion-01.txt  draft-day-srvloc-exclusion-02.nr.txt  draft-day-svrloc-signature-01.nr.txt
src/Unsupported/slp_client/scripts/: sa_sample  test_query  test_reg
src/Unsupported/slp_client/src/: Makefile  Makefile.nt
src/Unsupported/slp_client/src/cmd-utils/: Makefile  Makefile.nt  endian.h  lslp-common-defs.h  lslp-linux.c  lslp-linux.h  lslp-nucleus.c  lslp-nucleus.h  lslp-windows.c  lslp-windows.h  lslp.h
src/Unsupported/slp_client/src/cmd-utils/slp_client/: -v.h  Makefile  Makefile.nt  attr.l  attr.tab.c  attr.tab.h  attr.y  filter.l  filter.y  libslp_client.la  slp_client.c  slp_client.h  url.l  url.y  y_attr.h  y_attr.output  y_filter.h  y_url.h  y_url.output
src/Unsupported/slp_client/src/cmd-utils/slp_query/: Makefile  Makefile.nt  slp_query  slp_query.c
src/Unsupported/slp_client/src/cmd-utils/slp_query/.libs/: slp_query
src/Unsupported/slp_client/src/cmd-utils/slp_srvreg/: Makefile  Makefile.nt  slp_srvreg  slp_srvreg.c
src/Unsupported/slp_client/src/cmd-utils/slp_srvreg/.libs/: slp_srvreg
test/: Makefile  config.mak  configend.mak
vxworks/: Makefile  build-notes.txt  common.tests  commonerrors.txt  config.mak  porting.txt  vxexec
www/: Makefile  config.html  index.html  indication.html  provider.html
(+8593 files in other folders)
